test/corpus/L1/negative/keyword-no-arg.st
"---
id: keyword-no-arg
kind: negative
phase: parse
layer: L1
spec: anexoA:error.keyword-no-arg
origin: spec-ANSI
section: error.keyword-no-arg
note: keyword message keyword with no following argument expression
codes: E_KEYWORD_NO_ARG
---"
x at:
